--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@nestjs/swagger": "^11.0.6",
     "@prisma/client": "^6.4.1",
     "aws-sdk": "^2.1692.0",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
